--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@
   
   code,
   .code {
-    font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif, Courier, monospace;
     font-size: 1.125rem;
     line-height: 1.6;
     padding: 0;
