--- a/styles.css
+++ b/styles.css
@@ -1,106 +1,65 @@
-/* body, h1, h2, h3, p {
-  font-family: monospace;
-} */
-
 .title {
-    text-align: center;
-    margin-bottom: 0.2em;
-  }
-  
-  .subtitle {
-    text-align: center;
-    font-size: medium;
-    font-weight: bold;
-    margin-top: 0;
-  }
-  
-  img {
-    width: 100%
-  }
-  
-  body {
-    line-height: 1.6;
-    font-size: 18px;
-    padding: 0 10px;
-    margin: 60px auto;
-    max-width: 700px;
-  }
+  text-align: center;
+  margin-bottom: 0.2em;
+}
 
-  h1 {
-    margin-top: -1em
-  }
-  
-  h2,
-  h2,
-  h3 {
-    line-height: 1.2;
-  }
-  
-  h2 {
-    font-style: italic;
-    font-size: 18px;
-  }
-  
-  a:link,
-  a:visited {
-    color: black;
-    border-bottom: 1px dotted #000;
-    text-decoration: none;
-  }
+.subtitle {
+  text-align: center;
+  font-size: medium;
+  font-weight: bold;
+  margin-top: 0;
+}
 
-  a {
-    color: black;
-  }
-  
-  code,
-  .code {
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif, Courier, monospace;
-    font-size: 1.125rem;
-    line-height: 1.6;
-    padding: 0;
-    padding-top: 0;
-    padding-bottom: 0;
-    margin: 0;
-    font-size: 85%;
-    background-color: rgba(0, 0, 0, 0.04);
-    border-radius: 3px;
-  }
-  .subtitle {
-    /* text-align: center; */
-    font-size: medium;
-    font-weight: bold;
-    margin-top: 0;
-  }
-  
-  body {
-    line-height: 1.6;
-    font-size: 18px;
-    padding: 0 10px;
-    margin: 60px auto;
-    max-width: 700px;
-  }
-  
-  h2,
-  h2,
-  h3 {
-    line-height: 1.2;
-  }
-  
-  h2 {
-    font-style: italic;
-    font-size: 18px;
-  }
-  
-  code,
-  .code {
-    font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
-    font-size: 1.125rem;
-    line-height: 1.6;
-    padding: 0;
-    padding-top: 0;
-    padding-bottom: 0;
-    margin: 0;
-    font-size: 85%;
-    background-color: rgba(0, 0, 0, 0.04);
-    border-radius: 3px;
-  }
+img {
+  width: 100%
+}
+
+body {
+  line-height: 1.6;
+  font-size: 18px;
+  padding: 0 10px;
+  margin: 60px auto;
+  max-width: 700px;
+}
+
+h2,
+h2,
+h3 {
+  line-height: 1.2;
+}
+
+h2 {
+  font-style: italic;
+  font-size: 18px;
+}
+
+a:link,
+a:visited {
+  color: black;
+  border-bottom: 1px dotted #000;
+  text-decoration: none;
+}
+
+code,
+.code {
+  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  font-size: 1.125rem;
+  line-height: 1.6;
+  padding: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+  margin: 0;
+  font-size: 85%;
+  background-color: rgba(0, 0, 0, 0.04);
+  border-radius: 3px;
+}
+
+#projects {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.item {
+  margin-right: 2em;
+}
